--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: java
 jdk: oraclejdk9
 sudo: false
+before_install: chmod +x gradlew
 
-script: "./gradlew build"
+script:
+  - ./gradlew build
+  - ./gradlew check
+  - ./gradlew codeCoverageReport
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
