--- a/versions.properties
+++ b/versions.properties
@@ -2,6 +2,7 @@
 elasticsearch       = 6.3.2
 lucene              = 7.3.1
 commonscodec        = 1.10
+commonslang3        = 3.7
 
 # testing
 junit               = 4.12
