--- a/encoder/build.gradle
+++ b/encoder/build.gradle
@@ -1,35 +1,18 @@
 plugins {
-    id 'com.github.hierynomus.license' version '0.14.0'
     id 'com.github.jk1.dependency-license-report' version '1.2'
-    id 'com.github.johnrengelman.shadow' version '2.0.4'
 }
 
 dependencies {
-    compile "org.apache.commons:commons-lang3:${versions.commonslang3}"
     compile "commons-codec:commons-codec:${versions.commonscodec}"
 }
 
 jar {
-    metaInf {
-        from {
-            ["LICENSE.txt", "NOTICE.txt"]
-        }
-    }
+    metaInf { from { ["LICENSE.txt", "NOTICE.txt"] } }
 }
 
-license {
-    header = rootProject.file("encoder/HEADER.txt")
-    ext.year = Calendar.getInstance().get(Calendar.YEAR)
-    ext.developer = 'Nikolay Papakha'
-    ignoreFailures false
-    strictCheck true
-    mapping {
-        java = 'SLASHSTAR_STYLE'
-    }
-    excludes([
-            "**/*.txt",
-            "**/*.csv",
-            "**/*.properties",
-            "**/*.xml"
-    ])
+dependencies {
+    testImplementation "junit:junit:${versions.junit}"
+    testImplementation "org.hamcrest:hamcrest-all:${versions.hamcrest}"
+    testImplementation "org.assertj:assertj-core:${versions.assertj}"
+    testImplementation "org.elasticsearch.test:framework:${versions.elasticsearch}"
 }
