--- a/versions.properties
+++ b/versions.properties
@@ -1,11 +1,11 @@
 # main
-elasticsearch       = 6.3.2
-lucene              = 7.3.1
-commonscodec        = 1.10
+elasticsearch       = 7.0.0
+lucene              = 8.0.0
+commonscodec        = 1.11
 commonslang3        = 3.7
 
 # testing
 junit               = 4.12
 hamcrest            = 1.3
 assertj             = 3.10.0
-randomize           = 2.5.2
+randomized          = 2.7.2
