--- a/esplugin/src/test/resources/rest-api-spec/test/russian_phonetic/10_russian_phonetic_encode_first.yml
+++ b/esplugin/src/test/resources/rest-api-spec/test/russian_phonetic/10_russian_phonetic_encode_first.yml
@@ -9,7 +9,7 @@
                             analyzer:
                                 my_analyzer:
                                     tokenizer:  standard
-                                    filter: ["standard", "russian_phonetic"]
+                                    filter: ["russian_phonetic"]
                             filter:
                                 russian_phonetic:
                                     type: russian_phonetic
