--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'parent-project'
+include 'encoder', 'benchmark', 'esplugin'
 
-include 'encoder', 'benchmark'
+rootProject.name = 'Russian Phonetic Analysis'
