--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ before_install: chmod +x gradlew
 
 script:
   - ./gradlew build
-  - ./gradlew check
-  - ./gradlew codeCoverageReport
+#  - ./gradlew check
+#  - ./gradlew codeCoverageReport
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
