--- a/esplugin/build.gradle
+++ b/esplugin/build.gradle
@@ -1,3 +1,8 @@
+configurations.all {
+    resolutionStrategy.dependencySubstitution {
+        substitute project(':rest-api-spec') with module ("org.elasticsearch:rest-api-spec:${versions.elasticsearch}")
+    }
+}
 
 apply plugin: 'elasticsearch.esplugin'
 
